--- a/Thesis-latex/biblio.bib
+++ b/Thesis-latex/biblio.bib
@@ -36,21 +36,6 @@ author = "Francis E.H Tay and Lijuan Cao",
 
 
 
-
-@article {FSSEUTES,
-  title = {Forecasting Significant Societal Events Using The Embers Streaming Predictive Analytics System},
-  journal = {Big Data},
-  volume = {2},
-  number = {4},
-  year = {2014},
-  month = {12/2014},
-  pages = {185 - 195},
-  issn = {2167-647X},
-  doi = {10.1089/big.2014.0046},
-  author = {Doyle, Andy and Katz, Graham and Summers, Kristen and Ackermann, Chris and Zavorin, Ilya and Zunsik Lim and Muthiah, Sathappan and Patrick Butler and Self, Nathan and Zhao, Liang and Lu, Chang-Tien and Khandpur, Rupinder Paul and Fayed, Youssef and Naren Ramakrishnan}
-}
-
-
 @phdthesis{BenTaieb,
   title={Machine learning strategies for multi-step-ahead time series forecasting},
   author={Ben Taieb, Souhaib},
@@ -189,22 +174,6 @@ ISSN={2161-4393},
 month={June},}
 
 
-@Misc{paypal,
-  title = {2015 Full Year Financial Results},
-  year = 2016,
-  url = {\url{https://www.paypal.com/us/webapps/mpp/about}},
-  urldate = {2016-05-16}
-}
-
-
-@Misc{social,
-  author = {George C. S.},
-  title = {How Much Data Is Generated Every Minute On Social Media?},
-  year = 2015,
-  url = {\url{http://wersm.com/how-much-data-is-generated-every-minute-on-social-media/}},
-  urldate = {2015-08-19}
-}
-
 
 @inproceedings{bharat,
   author    = {R. Bharat Rao and
@@ -224,67 +193,7 @@ month={June},}
 }
 
 
-@Misc{spark,
-  title = {Spark Overview},
-  year = 2016,
-  url = {\url{http://spark.apache.org/docs/latest/index.html}},
-  urldate = {2016-05-16}
-}
 
-
-
-@inproceedings{Zaharia,
- author = {Zaharia, Matei and Chowdhury, Mosharaf and Das, Tathagata and Dave, Ankur and Ma, Justin and McCauley, Murphy and Franklin, Michael J. and Shenker, Scott and Stoica, Ion},
- title = {Resilient Distributed Datasets: A Fault-tolerant Abstraction for In-memory Cluster Computing},
- booktitle = {Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
- series = {NSDI'12},
- year = {2012},
- location = {San Jose, CA},
- pages = {2--2},
- numpages = {1},
- url = {http://dl.acm.org/citation.cfm?id=2228298.2228301},
- acmid = {2228301},
- publisher = {USENIX Association},
- address = {Berkeley, CA, USA},
-} 
-
-
-@Misc{grace,
-  author = {Grace Huang},
-  title = {Towards Benchmarking Modern Distributed Streaming Systems},
-  year = 2015,
-  url = {\url{https://spark-summit.org/2015/events/towards-benchmarking-modern-distributed-streaming-systems/}},
-  urldate = {2015-06-15}
-}
-
-
-@Misc{cloudera,
-  author = {Cloudera},
-  title = {Time Series for Spark},
-  year = 2016,
-  url = {\url{http://sryza.github.io/spark-timeseries/0.3.0/index.html}},
-  urldate = {2016-05-19}
-}
-
-
-
-@Misc{Storm,
-  author = {Storm},
-  title = {Documentation.},
-  year = 2016,
-  url = {\url{http://storm.apache.org/releases/2.0.0-SNAPSHOT/index.html}},
-  urldate = {2016-05-19}
-}
-
-
-
-@Misc{Flink,
-  author = {Flink},
-  title = {Apache Flink is an open source platform for distributed stream and batch data processing.},
-  year = 2016,
-  url = {\url{https://flink.apache.org/}},
-  urldate = {2016-05-19}
-}
 
 @Misc{robj,
   author = {Rob J Hyndman},
@@ -440,5 +349,57 @@ number = "1",
     priority = {2},
     title = {{Nearest neighbor based feature selection for regression and its application to neural activity.}},
     year = {2006}
+}
+
+
+@Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2013},
+    url = {http://www.R-project.org/},
+}
+
+@Manual{Shiny,
+    title = {shiny: Web Application Framework for R},
+    author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
+    year = {2016},
+    note = {R package version 0.14.2},
+    url = {https://CRAN.R-project.org/package=shiny},
+}
+  
+@Manual{plotly,
+    title = {plotly: Create Interactive Web Graphics via 'plotly.js'},
+    author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+    year = {2016},
+    note = {R package version 4.5.6},
+    url = {https://CRAN.R-project.org/package=plotly},
+}
+
+  
+@Manual{e1071,
+    title = {e1071: Misc Functions of the Department of Statistics, Probability
+Theory Group (Formerly: E1071), TU Wien},
+    author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
+    year = {2015},
+    note = {R package version 1.6-7},
+    url = {https://CRAN.R-project.org/package=e1071},
+}
+  
+@Manual{gbcode,
+    title = {gbcode: Code from the handbook "Statistical foundations of machine learning"},
+    author = {Gianluca Bontempi},
+    year = {2016},
+    note = {R package version 1.0},
+}
+
+  
+@Manual{quantmod,
+    title = {quantmod: Quantitative Financial Modelling Framework},
+    author = {Jeffrey A. Ryan},
+    year = {2016},
+    note = {R package version 0.4-7},
+    url = {https://CRAN.R-project.org/package=quantmod},
 }
 
